--- a/views/chapterTopic.ejs
+++ b/views/chapterTopic.ejs
@@ -35,5 +35,6 @@
         <div class="block md:hidden">
             <%- include('./partials/footer.ejs');%>
         </div>
+        <%- include('./partials/analytics-script.ejs');%>
     </body>
 </html>
