--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,5 +74,6 @@
                 document.querySelectorAll(".nav-link").classList.toggle("show-links");
             });
         </script>
+        <%- include('./partials/analytics-script.ejs');%>
     </body>
 </html>
